--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,6 @@ $custom-theme: mat-light-theme($custom-app-primary, $custom-app-secondary, $cust
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
